--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,103 @@
-/* 
-your CSS rules and font imports should go here 
-delete this comment, add the import directives for your fonts
-and add the CSS rules as described in the challenge
-*/
+@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400);
+
+body {
+	font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: 300;
+	font-size: 18px;
+
+	background-image: url(../img/background.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+a:link,
+a:visited {
+	text-decoration: none;
+	color: #0000AA;
+}
+
+a:hover,
+a:focus {
+	color: #0000EE;
+}
+
+h1, h2, h3 {
+	font-family: Raleway, 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: 300;
+}
+
+h1 {
+	font-size: 300%;
+	margin: 0;
+}
+
+h2, h3 {
+	font-color: #505050;
+}
+
+h2 {
+	font-size: 150%;
+	margin: 0;
+}
+
+h3 {
+	font-size: 125%;
+}
+
+main {
+	background-image: url(../img/ricepaper_v3.png);
+	opacity: 0.9;
+
+	margin-left: 30%;
+	margin-right: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+header {
+	color: #FFFFFF;
+	background-color: #FA5A0F;
+
+	padding: 1em;
+	border-bottom: 5px #EA4A00;
+}
+
+header p {
+	color: #EEEEEE;
+	font-size: 120%;
+	margin: 0;
+}
+
+.info {
+	padding: 1em;
+}
+
+.menu {
+	background-color: rgba(207, 205, 140, 0.5);
+	padding: 1em;
+}
+
+dt {
+	font-weight: 400;
+}
+
+dd {
+	font-size: 80%;
+	font-style: italic;
+
+	margin-left: 1em;
+	margin-bottom: 1em;
+}
+
+.about {
+	padding: 1em;
+}
+
+footer {
+	color: 80%;
+	text-align: right;
+	background-color: #FC892F;
+	padding: 1em;
+	border-top: 5px #EC791F;
+}
